@@ -1,0 +1,15 @@
+## Repository configuration file.
+##
+## Syntax is: toolname directory retrive-method url
+## retrieve-method is one of svn, git or wget.
+## 
+##
+clan analyzers svn https://alchemy.futurs.inria.fr/svn/users/bastoul/clan 
+cloog generators svn https://alchemy.futurs.inria.fr/svn/users/bastoul/cloog 
+candl analyzers svn https://alchemy.futurs.inria.fr/svn/users/bastoul/candl 
+#scop ir svn https://alchemy.futurs.inria.fr/svn/users/bastoul/ir/scop
+#polylib math wget https://alchemy.futurs.inria.fr/svn/users/pouchet/projects/polylib
+#piplib math wget https://alchemy.futurs.inria.fr/svn/users/pouchet/projects/piplib
+fm math svn https://alchemy.futurs.inria.fr/svn/users/pouchet/projects/letsee-projects/fourier-motzkin
+letsee optimizers svn https://alchemy.futurs.inria.fr/svn/users/pouchet/projects/letsee-projects/letsee
+#pluto optimizers git https://alchemy.futurs.inria.fr/svn/users/bondhugu/pluto
